# fast_api_shop

./: .pre-commit-config.yaml  README.md  run_mypy.sh
backend/: pyproject.toml
