[tool.poetry]
name = "fast_api_shop"
version = "0.1.0"
description = ""
authors = ["G"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
flake8 = "^4.0.1"
mypy = "^0.961"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
uvloop = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
